# meeting-transcriber

./: .gitignore  CLAUDE.md  DIART_INTEGRATION_PLAN.md  ECAPA_TDNN_MIGRATION_PLAN.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  README.md  REFACTOR_PLAN.md  REMOTE_SETUP_REPORT.md  build_sidecar.ps1  deploy.ps1  findings.md  merge_dictionaries.py  progress.md  pyinstaller_entry.py  pyproject.toml  task_plan.md  test_sidecar.ps1  test_sidecar2.ps1
audio_sidecar/: main.py  requirements.txt
backend/: IMPLEMENTATION_PLAN.md  config.py  main.py
backend/api/: routes_audio.py  routes_call_detection.py  routes_config.py  routes_dictionary.py  routes_health.py  routes_playback.py  routes_screenshot.py  routes_session.py  routes_speaker.py  routes_summary.py  routes_transcript.py  ws_audio_ingest.py  ws_transcription.py
backend/core/: audio_buffer.py  audio_capture.py  audio_compressor.py  audio_utils.py  correction_learner.py  device_watcher.py  diarizer.py  post_processor.py  screen_capture.py  segmentation_refiner.py  speaker_cluster.py  summarizer.py  text_refiner.py  transcriber.py  vram_manager.py
backend/models/: audio_stream.py  pipeline.py  schemas.py  session.py
backend/services/: call_detector.py
backend/storage/: correction_store.py  dictionary_store.py  file_store.py  speaker_store.py
frontend/: api_client.py  app.py
frontend/tabs/: tab_dictionary.py  tab_history.py  tab_settings.py  tab_speakers.py  tab_transcription.py
scripts/: start.py  start_server.ps1
tauri-app/: .env.remote  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
tauri-app/e2e/: audio.spec.ts  interaction.spec.ts  (+2 more)
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: audio_sidecar.rs  commands.rs  lib.rs  main.rs  sidecar.rs  tray.rs
tests/: test_server_start_script.py  test_session_registry.py  test_ws_audio_ingest.py
tools/: whisper_compare.py
(+56 files in other folders)
